fixed card hover on firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -201,8 +201,9 @@ li {
   background: white;
   top: 0;
   left: 0;
-  offset-path: path("M 239 17 C 142 17 48.5 103 48.5 213.5 C 48.5 324 126 408 244 408 C 362 408 412 319 412 213.5 C 412 108 334 68.5 244 68.5 C 154 68.5 102.68 135.079 99 213.5 C 95.32 291.921 157 350 231 345.5 C 305 341 357.5 290 357.5 219.5 C 357.5 149 314 121 244 121 C 174 121 151.5 167 151.5 213.5 C 151.5 260 176 286.5 224.5 286.5 C 273 286.5 296.5 253 296.5 218.5 C 296.5 184 270 177 244 177 C 218 177 197 198 197 218.5 C 197 239 206 250.5 225.5 250.5 C 245 250.5 253 242 253 218.5"
-    );
+  offset-path: path(
+    "M 239 17 C 142 17 48.5 103 48.5 213.5 C 48.5 324 126 408 244 408 C 362 408 412 319 412 213.5 C 412 108 334 68.5 244 68.5 C 154 68.5 102.68 135.079 99 213.5 C 95.32 291.921 157 350 231 345.5 C 305 341 357.5 290 357.5 219.5 C 357.5 149 314 121 244 121 C 174 121 151.5 167 151.5 213.5 C 151.5 260 176 286.5 224.5 286.5 C 273 286.5 296.5 253 296.5 218.5 C 296.5 184 270 177 244 177 C 218 177 197 198 197 218.5 C 197 239 206 250.5 225.5 250.5 C 245 250.5 253 242 253 218.5"
+  );
 }
 
 .text-stroke {
@@ -289,9 +290,11 @@ li {
 @media screen and (max-width: 600px) {
   .main-content {
     height: 100vh;
-    background: linear-gradient(to top,
+    background: linear-gradient(
+        to top,
         rgba(114, 2, 64, 0.6),
-        rgba(0, 0, 0, 0.8)),
+        rgba(0, 0, 0, 0.8)
+      ),
       url("/background-main.webp") no-repeat top center;
     background-size: cover;
   }
@@ -373,8 +376,6 @@ li {
 
 .school_link:hover .school_link_textMain {
   display: flex;
-  backdrop-filter: blur(3px);
-  background-color: rgba(0, 0, 0, 0.4);
   color: white;
   justify-content: center;
   align-items: center;
@@ -382,6 +383,7 @@ li {
   visibility: visible;
   opacity: 1;
   transition: opacity 0.4s ease-in-out;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .school_link_textMain {
@@ -412,7 +414,6 @@ li {
   font-family: sans-serif;
   font-size: 3rem;
 }
-
 
 .blur {
   background: rgba(255, 255, 255, 0.2);
@@ -479,7 +480,6 @@ li {
 }
 
 @media screen and (max-width: 600px) {
-
   .schools-grid-1,
   .schools-grid-2 {
     grid-template-columns: 1fr;
@@ -541,9 +541,11 @@ li {
 @media screen and (max-width: 600px) {
   .main-content {
     height: 100vh;
-    background: linear-gradient(to top,
+    background: linear-gradient(
+        to top,
         rgba(114, 2, 64, 0.6),
-        rgba(0, 0, 0, 0.8)),
+        rgba(0, 0, 0, 0.8)
+      ),
       url("/background-main.webp") no-repeat top center;
     background-size: cover;
   }
